# cleo

./: .gitignore  pyproject.toml  servers.yaml
cleo/: __init__.py  __main__.py  config.py
cleo/cli/: command.py
cleo/libs/server/: server.py
cleo/templates/skel/mail/: mail.eml.jinja
cleo/templates/skel/module/: __init__.py.jinja  __manifest__.py.jinja
cleo/templates/skel/module/controllers/: __init__.py.jinja  module.py.jinja
cleo/templates/skel/module/data/: model_data.xml.jinja
cleo/templates/skel/module/migrations/: rename-field.jinja  rename-xml-ids.jinja
cleo/templates/skel/module/migrations/{VERSION}/: end-{name}.py.jinja  post-{name}.py.jinja  pre-{name}.py.jinja
cleo/templates/skel/module/models/: model.py.jinja
cleo/templates/skel/module/security/: ir.model.access.csv.jinja
cleo/templates/skel/module/security/_partial/: model.csv.jinja
cleo/templates/skel/module/views/: model_views.xml.jinja
cleo/templates/skel/module/views/_partial/: form.xml.jinja  search.xml.jinja  tree.xml.jinja
cleo/utils/: jinja.py  python.py  version.py
cleo/utils/decorators/: exception.py
commands/: repo.py  scaffold.py
commands/odoo/: dev.py
